2005-09-26  Sebastien Pouliot  <sebastien@ximian.com>

	* Store*.cs: Moved from System.Security.dll

2005-05-31  Sebastien Pouliot  <sebastien@ximian.com>

	* ResourcePermissionBase.cs: Added more parameter checking for 2.0
	* PermissionHelper.cs: Identity permissions can be unrestricted in 2.0

2005-05-18  Jordi Mas i Hernandez <jordi@ximian.com>

	* StorePermissionAttribute.cs: fixes flag cleaning logical operation

2005-05-17  Sebastien Pouliot  <sebastien@ximian.com>

	* ResourcePermissionBase.cs: PermissionAccessType "could" be null. Fix
	regression in unit tests. 

2005-05-16  Sebastien Pouliot  <sebastien@ximian.com>

	* ResourcePermissionBase.cs: Added "access" attribute in ToXml. Made 
	FromXml a little better (simple cases) but not perfect (need samples).

2005-04-23  Sebastien Pouliot  <sebastien@ximian.com> 

	* StorePermission.cs: New. CAS permission to access certificate stores.
	* StorePermissionAttribute.cs: New. CAS permission attribute for
	StorePermission.

2005-01-19  Sebastien Pouliot  <sebastien@ximian.com>

	* ResourcePermissionBase.cs: IsSubset(null) returns false in 1.1 while
	it returns true in 2.0.

2004-09-10  Sebastien Pouliot  <sebastien@ximian.com>

	* PermissionHelper.cs: New. Static methods to help implementation of
	permission classes.
	* ResourcePermissionBase.cs: Implemented all TODO (except FromXml 
	which isn't complete).
	* ResourcePermissionBaseEntry.cs: Minor cleanup (namespaces, style).

2004-07-08  Sebastien Pouliot  <sebastien@ximian.com>

	* StorePermissionFlags.cs: Fixed flags values. Added [Serializable]
	attribute.

2004-07-07  Sebastien Pouliot  <sebastien@ximian.com>

	* StorePermissionFlags.cs: New. CAS-related enum for StorePermission.
	Adding it "creates" the namespace for corcompare.

2003-07-15  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* ChangeLog: Added
	* ResourcePermissionBaseEntry.cs: Implemented